      by us right now' with 'listed as down by the directory authorities'.
      With the old code, if a guard was unreachable by us but listed as
      running, it would clog our guard list forever.
    - Make eventdns give strings for DNS errors, not just error numbers.
    - Be prepared in case we ever have a network with more than 2GB per
      second total advertised capacity.

  o Documentation
    - Documented (and renamed) ServerDNSSearchDomains and
      ServerDNSResolvConfFile options.

  o Packaging:
    - Patches so Tor builds with MinGW on Windows.
    - The Debian package now uses --verify-config when (re)starting,
      to distinguish configuration errors from other errors.
    - Update rpms to require libevent 1.1b.
    - Remove architecture from OS X builds. The official builds are
      now universal binaries.

    - Make eventdns on-by-default.
    - Divide eventdns log messages into warn and info messages.
    - Add new config option "ResolvConf" to let the server operator
      choose an alternate resolve.conf file.

    - Allow really slow clients to not hang up five minutes into their
      directory downloads (suggested by Adam J. Richter).
    - Apply patch from Adam Langley: fix assert() in eventdns.c.
    - Finally fix the openssl warnings with newer gccs that believe that
      ignoring a return value is okay, but casting a return value and
      then ignoring it is a sign of madness.
    - Don't crash when the controller receives a third argument to an
      "extendcircuit" request.
    - Add a "getinfo address" controller command.
    - Controller protocol fixes: fix encoding in "getinfo addr-mappings"
      response; fix error code when "getinfo dir/status/" fails.
    - Start remembering X-Your-Address-Is directory hints even if you're
      a client, so you can become a server more smoothly.
    - Avoid crash when telling controller stream-status and a stream
      is detached.